fix: Visibility of the name of the events (#34)
Has been modified some lines to fix some details like
- responsiveness of gallery
- making visible the name of the events

Solve #25

--- a/src/app/components/Events/Events.module.css
+++ b/src/app/components/Events/Events.module.css
@@ -164,6 +164,8 @@
 }
 
 .cards .item .content {
+  position: absolute;
+
   inset: auto 10px 10px 10px;
   z-index: 40;
 }
